kubernetes/apps/downloads/tqm/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tqm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Downloads Service
    gethomepage.dev/name: TQM
    gethomepage.dev/icon: tqm.png
    gethomepage.dev/description: Torrent Queue Manager
spec:
  ingressClassName: internal
  rules:
    - host: &host "tqm.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                annotations:
                  io.cilium/lb-ipam-ips: 10.10.30.40
                name: tqm
                port:
                  number: 80
  tls:
    - hosts:
        - *host
